fixing phone issue -extra space

--- a/src/scss/navbar/_navbar.scss
+++ b/src/scss/navbar/_navbar.scss
@@ -7,7 +7,6 @@ nav {
   z-index: 2;
   height: fit-content;
   position: relative;
-  overflow: hidden;
 
   .brand {
     a {
@@ -88,12 +87,17 @@ nav {
     }
   }
 
-  .phone-menu {
+  .menu-wrapper{
     position: fixed;
     top: 0;
     z-index: 5;
     width: 100%;
+    visibility: hidden;
+    
+  }
+  .phone-menu {    
     height: 100vh;
+    overflow: hidden;
     background: $lighter-green;
     transform: translate3d(100%, 0, 0);
     transition: all 0.5s ease-out;
@@ -101,7 +105,6 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    visibility: hidden;
 
     button {
       background: $primary-green;
